2002-09-12  Jason Merrill  <jason@redhat.com>

	* calls.c (store_one_arg): Use size_in_bytes to determine the
	amount of space to push.

2002-09-12  Jakub Jelinek  <jakub@redhat.com>

	* config/sparc/linux64.h (STARTFILE_SPEC32): Fix a typo.

2002-09-12  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390-modes.def (CCAPmode, CCANmode): New CC modes.
	* config/s390/s390.c (s390_match_ccmode_set): Support new CC modes.
	(s390_select_ccmode): Likewise.
	(s390_branch_condition_mask): Likewise.
	(optimization_options): Do not set flag_branch_on_count.
	(s390_split_branches): Handle doloop branches.
	(s390_chunkify_pool): Likewise.
	* config/s390/s390.md ("*adddi3_imm_cc", "*addsi3_imm_cc"): New insns.
	("doloop_end"): New expander.
	("doolop_si", "*doloop_si_long", "doloop_di", "*doloop_di_long",
	associated splitters): New.

2002-09-11  Hartmut Penner  <hpenner@de.ibm.com>

	* fold-const.c (make_range): Only narrow to signed range if
	the signed range is smaller than the unsigned range.

2002-09-12  Alan Modra  <amodra@bigpond.net.au>

	* emit-rtl.c (set_mem_size): New function.
	* expr.h (set_mem_size): Declare.
	* config/rs6000/rs6000.c (expand_block_move_mem): Exterminate.
	(expand_block_move): Instead, use adjust_address and
	replace_equiv_address to generate proper aliasing info.
	Move common code out of conditionals.  Localize vars.

2002-09-09  Eric Botcazou  ebotcazou@libertysurf.fr
  
	* optabs.c (expand_binop): Minor cleanup.
	(expand_twoval_binop): Convert CONST_INTs like in expand_binop.

2002-09-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* print-tree.c (print_node): Print the restrict qualifier.

2002-09-11  Janis Johnson  <janis187@us.ibm.com>

	* doc/install.texi: Fix typos.

2002-09-11  Zack Weinberg  <zack@codesourcery.com>

	* Makefile.in: Remove all references to s-under and underscore.c.
	* collect2.c, tlink.c: Change all uses of prepends_underscore
	to look directly at USER_LABEL_PREFIX.

2002-09-11  David Edelsohn  <edelsohn@gnu.org>
